[tool.poetry]
name = "incremental"
version = "0.1.0"
description = ""
authors = ["Nick Bolten <nbolten@gmai.com>"]
license = "Apache-2.0"

[tool.poetry.scripts]
incremental = "incremental:cli.incremental"

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.9.0"
pygeos = "^0.10.2"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[tool.black]
line-length = 79
exclude = """
(
  setup.py
)
"""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
